[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "YAD2K"
version = "1.0"
description = "YAD2K"
authors = ["Allan Zelener"]
packages = [
  { from = ".", include = "yad2k" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyopenssl = "24.1.0"
absl-py = "2.1.0"
contourpy = "1.2.0"
cycler = "0.11.0"
fonttools = "4.51.0"
h5py = "3.11.0"
keras = "3.3.3"
kiwisolver = "1.4.4"
markdown-it-py = "3.0.0"
matplotlib = "3.8.4"
mdurl = "0.1.2"
ml-dtypes = "0.4.0"
namex = "0.0.8"
numpy = "1.26.4"
olefile = "0.46"
optree = "0.11.0"
packaging = "23.2"
pillow = "10.3.0"
pip = "24.0"
ply = "3.11"
protobuf = "5.27.0"
pydot-ng = "2.0.0"
Pygments = "2.18.0"
pyparsing = "3.0.9"
PyQt5 = "5.15.10"
PyQt5-sip = "12.13.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
PyYAML = "6.0.1"
rich = "13.7.1"
scipy = "1.13.0"
setuptools = "69.5.1"
sip = "6.7.12"
six = "1.16.0"
Theano = "1.0.5"
tornado = "6.3.3"
typing_extensions = "4.12.1"
unicodedata2 = "15.1.0"
wheel = "0.43.0"


[tool.poetry.dev-dependencies]
pylint = "3.2.0"

[tool.poetry.scripts]
